--- a/MySQLApp/Views/Home/Edit.cshtml
+++ b/MySQLApp/Views/Home/Edit.cshtml
@@ -4,9 +4,9 @@
 
 @model Bowler
 
-<h2>Enter New Bowler Information</h2>
+<h2>Edit Bowler Information</h2>
 
-<!--Create form-->
+<!--Editform-->
 <form method="post">
 
     <!--Show validation errors-->
