--- a/MySQLApp/Views/Shared/_Layout.cshtml
+++ b/MySQLApp/Views/Shared/_Layout.cshtml
@@ -13,8 +13,7 @@
     <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
             <div class="container">
-                <span class="navbar-brand ml-2">The Old Bookstore</span>
-                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">MySQLApp</a>
+                <span class="navbar-brand ml-2" asp-area="" asp-controller="Home" asp-action="Index">The Bowling League</span>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -25,7 +24,7 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="AddBowler">Add Bowler</a>
                         </li>
                     </ul>
                 </div>
@@ -38,6 +37,10 @@
         </main>
     </div>
 
+    <script src="~/lib/jquery/dist/jquery.min.js"></script>
+    <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="~/js/site.js" asp-append-version="true"></script>
+    @RenderSection("Scripts", required: false)
     <script src="_framework/blazor.server.js"></script>
 </body>
 </html>
